@@ -64,3 +64,5 @@
 - Random Event Genie lamps now scale exp correctly
 - Void mace now consumes runes correctly
 - Add remote kicking support to the Management Server
+- Added Christmas Event :)
+< --- ABOVE Released December 4, 2021 https://gitlab.com/2009scape/2009scape/-/tags/Dec-4-2021 ---- >
